--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <body>
     <header>
         <nav class="container">
+            <div class="mobile-menu">
+                <i class="fas fa-bars"></i>
+            </div>
             <div class="menu">
                 <li><a href="">Home</a></li>
                 <li><a href="">Clubs</a></li>
@@ -22,7 +25,7 @@
                 <li><a href="">Upcoming Matches</a></li>
                 <li><a href="">Contact</a></li>
             </div>
-           
+
             <div class="login-btn">
                 <a href=""><i class="fas fa-sign-in-alt"></i>Login</a>
             </div>
@@ -41,78 +44,92 @@
     </header>
     <section class="blogs-section">
         <div class="blogs container">
-            <div class="blog">
+            <article class="blog">
                 <img class="player-img" src="images/players/player-1.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-2.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-3.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-4.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-5.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-6.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-7.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-8.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-9.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-10.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-11.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
-            <div class="blog">
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
+            <article class="blog">
                 <img class="player-img" src="images/players/player-12.png" alt="">
                 <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            </div>
+                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
+                    amet faucibus sed id nisi lectus at.</p>
+            </article>
         </div>
     </section>
     <section class="highlight-section">
         <div class="highlight container">
             <div class="highlight-content">
                 <h2 class="highlight-title">All Highlights Copa America 2021</h2>
-                <p class="highlight-discription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <p class="highlight-discription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                    amet.</p>
                 <div class="watch-live-btn">
                     <a href="">Watch Live<i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
-            <div class="highlight-img" >
+            <div class="highlight-img">
                 <img src="images/match.png" alt="">
             </div>
 
@@ -123,13 +140,18 @@
             <img src="images/Logo.png" alt="">
         </div>
         <div class="social-icons">
-            <i class="fab fa-instagram"></i>
-            <i class="fas fa-futbol"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-youtube"></i>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fas fa-futbol"></i></a>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-youtube"></i></a>
         </div>
     </section>
+    <footer>
+        <div class="copy-right">
+            <p>Copyright &copy; 2022 Football</p>
+        </div>
+    </footer>
 
 </body>
 
