--- a/index.html
+++ b/index.html
@@ -43,88 +43,77 @@
         </div>
     </header>
     <section class="blogs-section">
-        <div class="blogs container">
-            <article class="blog">
-                <img class="player-img" src="images/players/player-1.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-2.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-3.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-4.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-5.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-6.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-7.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-8.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-9.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-10.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-11.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-            <article class="blog">
-                <img class="player-img" src="images/players/player-12.png" alt="">
-                <h2 class="player-name">Neymar Jr</h2>
-                <p class="player-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum
-                    amet faucibus sed id nisi lectus at.</p>
-            </article>
-        </div>
+            <div class="blogs container">
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-1.png" alt="">
+                    <h2 class="player-name">Neymar Jr</h2>
+                    <p class="player-discription">Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-2.png" alt="">
+                    <h2 class="player-name">Lionel Messi</h2>
+                    <p class="player-discription">Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and captains the Argentina national team.</p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-3.png" alt="">
+                    <h2 class="player-name">Cristiano Ronaldo</h2>
+                    <p class="player-discription">Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-4.png" alt="">
+                    <h2 class="player-name">Paulo Dybala</h2>
+                    <p class="player-discription">Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-5.png" alt="">
+                    <h2 class="player-name">Mesut Ozil </h2>
+                    <p class="player-discription">Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe.</p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-6.png" alt="">
+                    <h2 class="player-name">Mauro Icardi</h2>
+                    <p class="player-discription">Mauro Icardi Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-7.png" alt="">
+                    <h2 class="player-name">Di Maria</h2>
+                    <p class="player-discription">Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-8.png" alt="">
+                    <h2 class="player-name">Kylian Mbappé</h2>
+                    <p class="player-discription">Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-9.png" alt="">
+                    <h2 class="player-name">Mohamed Salah</h2>
+                    <p class="player-discription">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team</p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-10.png" alt="">
+                    <h2 class="player-name">Harry Kane</h2>
+                    <p class="player-discription">Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team. </p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-11.png" alt="">
+                    <h2 class="player-name">Kevin De BruyneNeymar Jr</h2>
+                    <p class="player-discription">Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City</p>
+                </article>
+                <article class="blog">
+                    <img class="player-img" src="images/players/player-12.png" alt="">
+                    <h2 class="player-name">Philippe Coutinho</h2>
+                    <p class="player-discription">Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.</p>
+                </article>
+            </div>
+            <div class="see-more-btn">
+                <a href="">See More</a>
+            </div>
     </section>
     <section class="highlight-section">
         <div class="highlight container">
             <div class="highlight-content">
                 <h2 class="highlight-title">All Highlights Copa America 2021</h2>
-                <p class="highlight-discription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
-                    amet.</p>
+                <p class="highlight-discription">Copa America Final Highlights Argentina 1 vs Brazil 0: Di Maria's goal wins Argentina its first Copa title since 1993; Messi wins first title with the Albiceleste.</p>
                 <div class="watch-live-btn">
                     <a href="">Watch Live<i class="fas fa-arrow-right"></i></a>
                 </div>
@@ -134,6 +123,62 @@
             </div>
 
         </div>
+    </section>
+    <section class="point-table-section">
+        <h2>Point Table</h2>
+        <table class="container">
+            <thead>
+                <td class="No">No</td>
+                <td class="team">Team</td>
+                <td class="GP">GP</td>
+                <td class="W">W</td>
+                <td class="D">D</td>
+                <td class="L">L</td>
+                <td class="PTS">PTS</td>
+            </thead>
+            <tbody class="team-details">
+                <tr>
+                    <td class="no">1</td>
+                    <td class="team">MANCHESTER CITY</td>
+                    <td class="GP">12</td>
+                    <td class="W">2</td>
+                    <td class="D">4</td>
+                    <td class="L">7</td>
+                    <td class="PTS">23</td>
+                </tr>
+                <tr>
+                    <td class="no">2</td>
+                    <td class="team">MANCHESTER UNITED</td>
+                    <td class="GP">10</td>
+                    <td class="W">4</td>
+                    <td class="D">9</td>
+                    <td class="L">2</td>
+                    <td class="PTS">33</td>
+                </tr>
+                <tr>
+                    <td class="no">3</td>
+                    <td class="team">lIVERPOOL</td>
+                    <td class="GP">32</td>
+                    <td class="W">3</td>
+                    <td class="D">6</td>
+                    <td class="L">5</td>
+                    <td class="PTS">33</td>
+                </tr>
+                <tr>
+                    <td class="no">4</td>
+                    <td class="team">CHELSEA</td>
+                    <td class="GP">38</td>
+                    <td class="W">18</td>
+                    <td class="D">10</td>
+                    <td class="L">9</td>
+                    <td class="PTS">23</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+    <section class="video-section">
+        <h2>Highlights Video</h2>
+        <iframe src="https://www.youtube.com/embed/6tLxv5EsszA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section class="social-section">
         <div class="logo">
