--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             </div>
 
             <div class="login-btn">
-                <a href=""><i class="fas fa-sign-in-alt"></i>Login</a>
+                <a href="https://www.facebook.com/ahnabshahin/" target="_blank"><i class="fas fa-sign-in-alt"></i>Login</a>
             </div>
         </nav>
         <div class="banner container">
             <div class="banner-contant">
                 <h1 class="banner-title">Conmebol Copa America 2021</h1>
                 <div class="watch-live-btn">
-                    <a href="">Watch Live<i class="fas fa-arrow-right"></i></a>
+                    <a href="https://www.facebook.com/ahnabshahin/" target="_blank">Watch Live<i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
             <div class="banner-img">
@@ -96,7 +96,7 @@
                 </article>
                 <article class="blog">
                     <img class="player-img" src="images/players/player-11.png" alt="">
-                    <h2 class="player-name">Kevin De BruyneNeymar Jr</h2>
+                    <h2 class="player-name">Kevin De Bruyne</h2>
                     <p class="player-discription">Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City</p>
                 </article>
                 <article class="blog">
@@ -106,7 +106,7 @@
                 </article>
             </div>
             <div class="see-more-btn">
-                <a href="">See More</a>
+                <a href="https://www.facebook.com/ahnabshahin/" target="_blank">See More</a>
             </div>
     </section>
     <section class="highlight-section">
@@ -115,7 +115,7 @@
                 <h2 class="highlight-title">All Highlights Copa America 2021</h2>
                 <p class="highlight-discription">Copa America Final Highlights Argentina 1 vs Brazil 0: Di Maria's goal wins Argentina its first Copa title since 1993; Messi wins first title with the Albiceleste.</p>
                 <div class="watch-live-btn">
-                    <a href="">Watch Live<i class="fas fa-arrow-right"></i></a>
+                    <a href="https://www.facebook.com/ahnabshahin/" target="_blank">Watch Live<i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
             <div class="highlight-img">
